- Improved Meshclass, -Added a simple test directional Light

--- a/Voxelrendering2.csproj
+++ b/Voxelrendering2.csproj
@@ -2,16 +2,26 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <PropertyGroup>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <!-- Beispiel für Windows 64-bit -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <!-- Optional: Einzelne Datei -->
+    <PublishTrimmed>true</PublishTrimmed>
+    <PackAsTool>False</PackAsTool>
+    <!-- Optional: Trimming -->
   </PropertyGroup>
   
 
 
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.8.2" />
+    <PackageReference Include="OpenTK.GLControl" Version="3.3.3" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.1" />
   </ItemGroup>
 
@@ -19,14 +29,20 @@
     <None Update="shaderstatic.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
+    <None Update="Shaders\depth.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Shaders\depth.vert">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
     <None Update="Shaders\shader.vert">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Shaders\shader.frag">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Heightmaps\grayscale_image.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
