--- a/Voxelrendering2.csproj
+++ b/Voxelrendering2.csproj
@@ -20,8 +20,11 @@
 
 
   <ItemGroup>
+    <PackageReference Include="LibNoise" Version="0.2.0" />
+    <PackageReference Include="LibNoise.NetStandart" Version="0.2.0" />
     <PackageReference Include="OpenTK" Version="4.8.2" />
     <PackageReference Include="OpenTK.GLControl" Version="3.3.3" />
+    <PackageReference Include="SharpNoise" Version="0.12.1.1" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.1" />
   </ItemGroup>
 
