--- a/Voxelrendering2.csproj
+++ b/Voxelrendering2.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Platforms>AnyCPU;x64;ARM64</Platforms>
   </PropertyGroup>
   <PropertyGroup>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
@@ -16,15 +17,21 @@
     <PackAsTool>False</PackAsTool>
     <!-- Optional: Trimming -->
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Textrenderer2.cs" />
+  </ItemGroup>
   
 
 
   <ItemGroup>
+    <PackageReference Include="freetype" Version="2.8.0.1" />
     <PackageReference Include="LibNoise" Version="0.2.0" />
     <PackageReference Include="LibNoise.NetStandart" Version="0.2.0" />
     <PackageReference Include="OpenTK" Version="4.8.2" />
     <PackageReference Include="OpenTK.GLControl" Version="3.3.3" />
+    <PackageReference Include="SharpFont" Version="4.0.1" />
     <PackageReference Include="SharpNoise" Version="0.12.1.1" />
+    <PackageReference Include="SkiaSharp" Version="3.0.0-preview.4.1" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.1" />
   </ItemGroup>
 
